--- a/src/assets/sass/home.scss
+++ b/src/assets/sass/home.scss
@@ -135,48 +135,334 @@
   }
 }
 
-// about
+// ===about===
 #about {
+  z-index: 9;
+  position: relative;
+
   h3 {
-    font-weight: 700;
-    font-size: 28px;
-    line-height: 34px;
-    letter-spacing: 3.63636px;
-    color: #262626;
-    text-align: center;
-    margin-bottom: 71px;
+    @include h3('#ABOUT DIGISALAD', $main_4, $main_5)
+  }
+
+  .video_box {
+    width: 80%;
+    margin: 70px auto 0;
     position: relative;
-    width: fit-content;
-    margin: 0 auto;
-    &:after{
-      content: "#ABOUT DIGISALAD";
-      white-space: nowrap;
+
+    video {
       width: 100%;
-      display: block;
-      position:absolute;
-      top: 10px;
-      left: 0px;
-      margin: 0 auto;
-      color: transparent;
-      text-decoration: underline wavy $main_1 4px;
+      cursor: pointer;
+      // border: transparent 1px solid;
     }
-    &:before{
-      content: "";
-      position:absolute;
-      transform: translateY(-50%);
-      top: 50%;
-      right: -20px;
-      height: 10px;
-      width: 10px;
-      border-radius: 50px;
-      background-color: #EE6C8A;
+
+    .icon_box {
+
+      .fa-circle-play,
+      .fa-circle-pause {
+        color: $main_5;
+        font-size: 60px;
+        position: absolute;
+        transform: translate(-50%, -50%);
+        top: 50%;
+        left: 50%;
+      }
+    }
+
+    .icon_box.active {
+      .fa-circle-pause {
+        animation: pauseAnimation .5s;
+        animation-iteration-count: 1;
+        animation-fill-mode: forwards;
+      }
     }
   }
-  .video_box{
+
+  .txt {
     width: 80%;
-    margin: 70px auto;
-    video{
+    margin: 30px auto;
+    color: $main_4;
+    font-weight: 400;
+    font-size: 16px;
+    line-height: 28px;
+    text-align: center;
+    letter-spacing: 1px;
+
+  }
+
+  .btn {
+    @include btn_rectangle($main_5, $main_3)
+  }
+}
+
+@keyframes pauseAnimation {
+  0% {
+    opacity: 1;
+  }
+
+  100% {
+    opacity: 0;
+  }
+}
+
+@media screen and (min-width:768px) {
+  #about {
+    h3 {
+      font-size: 28px;
+    }
+
+    .video_box {
+      .icon_box {
+
+        .fa-circle-play,
+        .fa-circle-pause {
+          font-size: 100px;
+        }
+      }
+
+    }
+  }
+}
+
+.main_box {
+  // border: 5px solid green;
+  margin-top: 100px; //***暫時
+}
+
+// ===award_box===
+#award_box {
+  position: relative;
+  // height: 1000px;
+  transform: translateY(50%);
+  // border: 5px solid red;
+  width: 90%;
+  margin-left: auto;
+  margin-bottom: 50px;
+
+  .wrapper {
+    background-color: $main_3;
+    padding: 30px;
+    border-radius: 50px 0 50px 50px;
+
+    .txt_box {
+      h3 {
+        @include h3('#AWARDS', $main_4, $main_5)
+      }
+
+      p {
+        margin-top: 45px;
+        color: $main_4;
+        @include text();
+      }
+    }
+
+    .img_box {
+      position: relative;
+      padding: 30px 0;
+
+      img {
+        width: 50%;
+        padding-right: 10px;
+        padding-bottom: 10px;
+      }
+    }
+  }
+}
+
+@media screen and (min-width:768px) {
+  #award_box {
+    .wrapper {
+      width: 90%;
+      margin-left: auto;
+
+      .img_box {
+        img {
+          max-width: 360px;
+        }
+      }
+    }
+  }
+}
+
+@media screen and (min-width:1024px) {
+  #award_box {
+    .wrapper {
+      display: flex;
+      flex-wrap: wrap;
+      align-items: center;
+
+      .txt_box {
+        width: 50%;
+        padding-right: 37px;
+      }
+
+      .img_box {
+        width: 50%;
+
+        img {
+          max-width: 300px;
+          padding: 18px;
+        }
+      }
+    }
+  }
+}
+
+// ===ingradients===
+#ingradients {
+  background-color: $main_5;
+  padding-bottom: 50px;
+  border-radius: 50px 0 50px 0;
+
+  .wrapper {
+    width: 80%;
+    margin: 0 auto;
+
+    .title_box {
+      margin-bottom: 85px;
+
+      h3 {
+        @include h3('#OUR INGRADIENTS', $main_3, $main_6);
+        margin-bottom: 70px;
+      }
+
+      p {
+        text-align: center;
+        color: $main_3;
+        @include text();
+        margin-bottom: 45px;
+
+      }
+
+      .btn {
+        @include btn_rectangle($main_6, $main_3);
+      }
+    }
+  }
+
+  .ingradients_box {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-between;
+    color: $main_3;
+    margin-bottom: 100px;
+
+    .item {
       width: 100%;
+      display: flex;
+      flex-wrap: wrap;
+      flex-direction: column;
+      align-items: center;
+      justify-content: space-evenly;
+      position: relative;
+      padding: 30px 25px;
+
+      img {
+        display: block;
+        width: 30%;
+        margin-bottom: 20px;
+      }
+
+      h4 {
+        text-align: center;
+        margin-bottom: 20px;
+        font-weight: 700;
+        font-size: 20px;
+        line-height: 24px;
+        letter-spacing: 2px;
+        text-transform: uppercase;
+        align-self: center;
+      }
+
+      p {
+        text-align: center;
+        @include text();
+        margin-bottom: 20px;
+      }
+
+      button {
+        display: block;
+        outline: none;
+        background-color: transparent;
+        padding: 20px 35px;
+        color: $main_3;
+        border: 2px solid $main_3;
+        border-radius: 30px;
+        font-weight: 700;
+        font-size: 14px;
+        letter-spacing: 2.22222px;
+        cursor: pointer;
+      }
+    }
+  }
+
+  .ingradient_btn {
+    font-weight: 700;
+    font-size: 12px;
+    line-height: 22px;
+    letter-spacing: 2px;
+    color: $main_3;
+    position: relative;
+    display: block;
+    width: fit-content;
+    margin: 0 auto;
+    z-index: 2;
+    position: relative;
+    text-align: center;
+
+    &::before {
+      content: "#VIEW MORE DIGISALAD’S INGRADIENTS#";
+      position: absolute;
+      color: transparent;
+      text-decoration: underline 5px $main_7;
+      left: 0;
+      bottom: 7px;
+      z-index: -1;
+      white-space: pre-wrap;
+      width: fit-content;
+    }
+  }
+}
+
+@media screen and (min-width:387px) {
+  #ingradients {
+    .wrapper {
+      .ingradient_btn {
+        &::before {
+          white-space: nowrap;
+          text-decoration-thickness: 10px;
+          left: -2%;
+          width: 104%;
+        }
+      }
+    }
+
+  }
+}
+
+@media screen and (min-width:768px) {
+  #ingradients {
+    padding-bottom: 250px;
+
+    .wrapper {
+      .ingradients_box {
+        .item {
+          width: 48%;
+        }
+      }
+    }
+  }
+}
+
+@media screen and (min-width:1024px) {
+  #ingradients {
+    .wrapper {
+
+      // .title_box{}
+      .ingradients_box {
+        .item {
+          width: 33.33%;
+        }
+      }
     }
   }
 }
