--- a/src/assets/sass/header.scss
+++ b/src/assets/sass/header.scss
@@ -1,66 +1,68 @@
 #header {
     overflow: hidden;
-
+    // border: 1px solid red;
     .holder {
-        display: flex;
-        flex-wrap: wrap;
-        align-items: center;
-        justify-content: space-between;
-        padding: 15px 10px;
-        width: 100%;
         position: fixed;
         top: 0;
-        left: 0;
         z-index: 10;
-        // border: 1px solid red;
-        .logo {
-            width: 100px;
-            position: relative;
-            display: block;
-            // border: 1px solid red;
-            img {
-                width: 100%;
-                vertical-align: top;
-            }
-        }
-
-        .function_box {
+        min-width: 100%;
+        .wrapper{
+           @include maxWidth;
             display: flex;
             flex-wrap: wrap;
             align-items: center;
-
-            .btn_1 {
+            justify-content: space-between;
+            padding: 15px 10px;
+            .logo {
+                width: 100px;
+                position: relative;
                 display: block;
-                padding: 12px 10px;
-                width: fit-content;
-                background: linear-gradient(90deg, $main_1 3.94%, $main_2 94.73%);
-                border-radius: 24px;
-                color: $main_3;
-                margin-right: 30px;
-                font-size: 14px;
+                // border: 1px solid red;
+                img {
+                    width: 100%;
+                    vertical-align: top;
+                }
             }
-
-            .toggle {
-                width: 30px;
-                height: 22px;
+    
+            .function_box {
                 display: flex;
                 flex-wrap: wrap;
-                flex-direction: column;
-                justify-content: space-between;
-
-                span {
-                    width: 100%;
-                    height: 3px;
-                    background-color: $main_3;
+                align-items: center;
+    
+                .btn_1 {
                     display: block;
-
-                    &:nth-child(3) {
-                        width: 80%;
-                        margin-left: auto;
+                    padding: 12px 10px;
+                    width: fit-content;
+                    background: linear-gradient(90deg, $main_1 3.94%, $main_2 94.73%);
+                    border-radius: 24px;
+                    color: $main_3;
+                    margin-right: 30px;
+                    font-size: 14px;
+                }
+    
+                .toggle {
+                    width: 30px;
+                    height: 22px;
+                    display: flex;
+                    flex-wrap: wrap;
+                    flex-direction: column;
+                    justify-content: space-between;
+    
+                    span {
+                        width: 100%;
+                        height: 3px;
+                        background-color: $main_3;
+                        display: block;
+    
+                        &:nth-child(3) {
+                            width: 80%;
+                            margin-left: auto;
+                        }
                     }
                 }
             }
         }
+        
     }
 }
 
