--- a/src/assets/sass/main.scss
+++ b/src/assets/sass/main.scss
@@ -14,6 +14,7 @@ $main_7: #FFBC58;
 
 body {
     background-color: #F5F5F5;
+    // background-color: #Fff;
 }
 
 a {
@@ -89,8 +90,22 @@ a {
     }
 }
 
-@mixin text(){
+@mixin text($lineHight:28px){
     font-size: 16px;
-    line-height: 28px;
+    line-height: $lineHight;
     letter-spacing: 1px;
+}
+@mixin center{
+    position: absolute;
+    transform: translate(-50%, -50%);
+    top: 50%;
+    left: 50%;
+}
+@mixin flex{
+    display: flex;
+    flex-wrap: wrap;
+}
+@mixin maxWidth(){
+    max-width: 1440px;
+    margin: 0 auto;
 }
