--- a/src/assets/sass/header.scss
+++ b/src/assets/sass/header.scss
@@ -1,34 +1,38 @@
 #header {
     overflow: hidden;
+
     // border: 1px solid red;
     .holder {
         position: fixed;
         top: 0;
         z-index: 10;
         min-width: 100%;
-        .wrapper{
-           @include maxWidth;
+        // visibility: hidden;//暫時
+        .wrapper {
+            @include maxWidth;
             display: flex;
             flex-wrap: wrap;
             align-items: center;
             justify-content: space-between;
             padding: 15px 10px;
+
             .logo {
                 width: 100px;
                 position: relative;
                 display: block;
+
                 // border: 1px solid red;
                 img {
                     width: 100%;
                     vertical-align: top;
                 }
             }
-    
+
             .function_box {
                 display: flex;
                 flex-wrap: wrap;
                 align-items: center;
-    
+
                 .btn_1 {
                     display: block;
                     padding: 12px 10px;
@@ -39,7 +43,7 @@
                     margin-right: 30px;
                     font-size: 14px;
                 }
-    
+
                 .toggle {
                     width: 30px;
                     height: 22px;
@@ -47,13 +51,13 @@
                     flex-wrap: wrap;
                     flex-direction: column;
                     justify-content: space-between;
-    
+                    cursor: pointer;
                     span {
                         width: 100%;
                         height: 3px;
                         background-color: $main_3;
                         display: block;
-    
+                        border-radius: 5px;
                         &:nth-child(3) {
                             width: 80%;
                             margin-left: auto;
@@ -62,67 +66,107 @@
                 }
             }
         }
-        
+
     }
 }
 
-// SideMenu
-.SideMenu {
-    display: none;
-    border: 1px solid red;
-    // background-color: $main_2;
-    background: linear-gradient(180deg, #585880 3.61%, #26C6D0 95.7%);
-    opacity: 0.9;
-    width: 100%;
-    height: 100vh;
-    position: fixed;
-    top: 0;
-    left: 0;
-    z-index: 10;
-    ul{
-        display: grid;
-        gap: 30px;
-        grid-template-columns: repeat(3, 1fr);;
-        grid-template-rows: repeat(4, 1fr);;
-        width: 100%;
-        height: 100%;
-        padding: 60px;
-        li{
-            border: 1px solid red;
-            background-color: #fff;
-            color: black;
-            padding: 30px;
-            a{
-                display: block;
-                width: 100%;
-                height: 100%;
-                div{
-                    background-color: #26C6D0;
-                    width: 100%;
-                    height: 100%;
-                    p{
-                        color: #fff;
-                    }
-                }
-            }
-        }
-        li:nth-child(1){//About us
-            grid-area: 1/1/2/2;
-        }
-        li:nth-child(2){ //careers
-            grid-area: 1/2/4/3;
-        }
-        li:nth-child(3){ //services
-            grid-area: 1/3/3/4;
-        }
-        li:nth-child(4){ //works
-            grid-area: 2/1/5/2;
-        }
-        li:nth-child(5){ //INSIGHT
-            grid-area: 4/2/5/3;
-        }
-        li:nth-child(6){ //CONTACT
-            grid-area: 3/3/5/4;
-        }
-    }
-}
+// #menu {
+//     //nav
+//     min-height: 100vh;
+//     background: linear-gradient(180deg, #585880 3.61%, #26C6D0 95.7%);
+//     mix-blend-mode: normal; //**
+//     opacity: 0.9;
+//     position: fixed;
+//     top: 0;
+//     left: 0;
+//     width: 100%;
+//     border: 1px solid red;
+//     z-index: 11;
+
+//     .logo {
+//         width: 100px;
+//         border: 1px solid red;
+//     }
+
+//     .wrapper {
+//         //ul
+
+//         .item {
+
+//             //li  //3欄的
+//             ul {
+//                 .link {//a
+//                     .list {//li(com)
+//                         // display: block;
+//                         border: 1px solid red;
+//                         width: 90%;
+//                         margin: 0 auto;
+//                         // height: 100%;
+//                         border-radius: 30px;
+//                         overflow: hidden;
+//                         background-color: #26C6D0;
+//                         margin-bottom: 20px;
+//                         position: relative;
+//                         padding: 20px;
+//                         display: flex;
+//                         flex-wrap: wrap;
+//                         align-items: center;
+//                         justify-content: space-evenly;
+
+//                         // &:after {
+//                         //     content: "";
+//                         //     background-size: cover;
+//                         //     background: url(../assets/img/about_bg.png) center no-repeat;
+//                         //     opacity: 0.08;
+//                         //     width: 100%;
+//                         //     height: 100%;
+//                         //     position: absolute;
+//                         //     top: 0;
+//                         //     left: 0;
+//                         //     z-index: 10;
+//                         // }
+//                         // .img_box {
+//                             // width: 10%;
+//                             // border: 1px solid red;
+
+//                         img {
+//                             width: 10%;
+//                             display: block;
+//                             border: 1px solid red;
+//                         }
+//                         // }
+
+//                         .txt_box {
+//                             width: 70%;
+//                             border: 1px solid red;
+
+//                             p {
+//                                 color: $main_3;
+//                                 border: 1px solid red;
+
+//                                 &:nth-child(1) {
+//                                     font-size: 16px;
+//                                     line-height: 19px;
+//                                     letter-spacing: 1.8px;
+//                                     margin-bottom: 9px;
+//                                 }
+//                             }
+
+//                             .title {
+//                                 font-weight: 700;
+//                                 font-size: 32px;
+//                                 line-height: 39px;
+//                                 letter-spacing: 3.63636px;
+//                             }
+//                         }
+                        
+
+//                         // }
+//                     }
+//                 }
+//             }
+
+
+//         }
+//     }
+// }
