--- a/src/assets/sass/main.scss
+++ b/src/assets/sass/main.scss
@@ -23,53 +23,120 @@ a {
 
 .fade-enter-active,
 .fade-leave-active {
-  transition: opacity 1s;
+    transition: opacity 1s;
 }
 
 .fade-enter-from,
 .fade-leave-to {
-  opacity: 0;
+    opacity: 0;
 }
 
 .fade-enter-to,
 .fade-leave-from {
-  opacity: 1;
+    opacity: 1;
+}
+// slideToRight
+.slideToRight-leave-active,
+.slideToRight-enter-active {
+  transition: all .9s ease-in-out;
 }
 
-@mixin btn_rectangle($bgColor:$main_5, $textColor:$main_3,$size:'normal') {
-    background-color: $bgColor;
+.slideToRight-enter-from {
+  transform: translateX(100%);
+}
+
+.slideToRight-leave-to {
+  transform: translateX(-100%);
+}
+// slideToLeft
+.slideToLeft-leave-active,
+.slideToLeft-enter-active {
+  transition: all .9s ease-in-out;
+}
+
+.slideToLeft-enter-from {
+  transform: translateX(-100%);
+}
+
+.slideToLeft-leave-to {
+  transform: translateX(100%);
+}
+@mixin btnRectangle($size:'normal',$bgColor:$main_5,$txtColor:$main_3,$bgHover:$main_3,$txtHover:$main_4) {
+    cursor: pointer;
     padding: 20px 15px;
-    color: $textColor;
     font-size: 16px;
     font-weight: 700;
     letter-spacing: 2.22222px;
     margin: 0 auto;
+    position: relative;
     display: block;
+    background-color: $bgColor;
+    color: $txtColor;
     width: fit-content;
-    cursor: pointer;
-    span {
-        letter-spacing: 0;
-        margin-left: 14px;
+    overflow: hidden;
+    border: 2px solid $bgColor;
+    background: $bgHover;
+
+    &::before {
+        @include pseudo();
+        background: $bgColor;
+        width: 100%;
+        transition: transform 0.4s;
     }
 
-    @media screen and (min-width:768px) {
-        @if ($size == 'large'){
+    .line {
+        letter-spacing: -2px;
+        margin-left: 14px;
+        color: $txtColor;
+    }
+
+    span {
+        position: relative;
+    }
+
+    &:hover::before {
+        transform: translate3d(130%, 0, 0) skew(40deg);
+    }
+
+    &:hover span {
+        transition: 0.4s;
+        color: $txtHover;
+    }
+    &:hover{
+        transform: scale(0.98);
+    }
+    @media screen and (min-width:1200px) {
+        @if ($size =='large') {
             padding: 60px 30px;
-        }@else {
+        }
+
+        @else {
             padding: 30px 24px;
-          }
-        color: $main_3;
+        }
+
         font-size: 16px;
     }
 }
-@mixin decoWavy($textColor:$main_4,$wavyColor:$main_5){
+
+@mixin decoBall($right: 5px) {
+    content: "";
+    position: absolute;
+    transform: translateY(-50%);
+    top: 50%;
+    right: $right;
+    height: 10px;
+    width: 10px;
+    border-radius: 50px;
+    background-color: #EE6C8A;
+}
+
+@mixin decoWavy($textColor: $main_4, $wavyColor: $main_5) {
     font-weight: 700;
     font-size: 20px;
     line-height: 34px;
     letter-spacing: 3.63636px;
     color: $textColor;
     text-align: center;
-    // margin-bottom: 71px;
     position: relative;
     width: fit-content;
     margin: 0 auto;
@@ -79,94 +146,48 @@ a {
     text-decoration-thickness: 3px;
     text-decoration-color: $wavyColor;
     text-underline-offset: 10px;
-    &:before {
-        content: "";
-        position: absolute;
-        transform: translateY(-50%);
-        top: 50%;
-        right: 5px;
-        height: 10px;
-        width: 10px;
-        border-radius: 50px;
-        background-color: #EE6C8A;
-    }
-}
-@mixin h3($str, $textColor, $wavyColor) {
-    font-weight: 700;
-    font-size: 20px;
-    line-height: 34px;
-    letter-spacing: 3.63636px;
-    color: $textColor;
-    text-align: center;
-    margin-bottom: 71px;
-    position: relative;
-    width: fit-content;
-    margin: 0 auto;
-    white-space: nowrap;
-    &:after {
-        content: "#{$str}";
-        white-space: nowrap;
-        width: 100%;
-        display: block;
-        position: absolute;
-        top: 10px;
-        left: 0px;
-        margin: 0 auto;
-        color: transparent;
-        text-decoration: underline wavy $wavyColor 4px;
-    }
 
     &:before {
-        content: "";
-        position: absolute;
-        transform: translateY(-50%);
-        top: 50%;
-        right: -20px;
-        height: 10px;
-        width: 10px;
-        border-radius: 50px;
-        background-color: #EE6C8A;
-    }
-
-    @media screen and (min-width:768px) {
-        h3 {
-            font-size: 28px;
-        }
+        @include decoBall();
     }
 }
 
-@mixin text($lineHight:28px){
+
+@mixin text($lineHight: 28px) {
     font-size: 16px;
     line-height: $lineHight;
     letter-spacing: 1px;
 }
-@mixin center{
+
+@mixin center {
     position: absolute;
     transform: translate(-50%, -50%);
     top: 50%;
     left: 50%;
 }
-@mixin flex{
+
+@mixin flex {
     display: flex;
     flex-wrap: wrap;
 }
-@mixin maxWidth($maxWidth:1440px){
+
+@mixin maxWidth($maxWidth: 1440px) {
     max-width: $maxWidth;
     margin: 0 auto;
 }
 
-@mixin bgImage(){
+@mixin bgImage($position:center) {
     background-size: cover;
-    background-position: center;
+    background-position: $position;
     background-repeat: no-repeat;
 }
 
-@mixin pseudo(){
+@mixin pseudo($w: 100%, $h: 100%, $left: 0, $top: 0) {
     content: "";
     position: absolute;
-    width: 100%;
-    height: 100%;
-    left: 0;
-    top: 0;
+    width: $w;
+    height: $h;
+    left: $left;
+    top: $top;
     display: block;
 }
